ui: Don't use deprecated GtkStyleContext API

Update for deprecations.

https://bugzilla.gnome.org/show_bug.cgi?id=690593